Update Hugo configuration and rebuild site

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://wyattj37.github.io/blog/
+baseURL: https://wyattj37.github.io/new-blog/
 languageCode: en-us
 title: Wyatt Johnston
 theme: mini
