with file theme

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,7 @@
-baseURL: https://wyattj37.github.io/
+baseURL: https://wyattj37.github.io/new-blog/
 languageCode: en-us
 title: Wyatt Johnston
-theme: 
-   - github.com/nodejh/hugo-theme-mini
+theme: mini
 publishDir: "docs"
 
 # Default content language, support en (English) / zh (Chinese) / nl (Dutch) / fr (French) / es (Spanish) / da (Danish), default 'en'
