--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: Wyatt Johnston
 theme: mini
 publishDir: "docs"
+canonifyurls: true
 
 # Default content language, support en (English) / zh (Chinese) / nl (Dutch) / fr (French) / es (Spanish) / da (Danish), default 'en'
 defaultContentLanguage: en
