--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://wyattj37.github.io/new-blog/
+baseURL: http://wyatt-johnston.com
 languageCode: en-us
 title: Wyatt Johnston
 theme: mini
