change wording and tags

--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,8 @@ markup:
 social:
   # e.g.
   github: https://github.com/wyattj37
+  linkedin: https://linkedin.com/in/wyatt-d-johnston
+
   #twitter: your-twitter-link
   #stackoverflow: your-stackoverflow-link
   # facebook: your-facebook-link
