featured home page

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ params:
   # Site Author
   author: Wyatt Johnston
   # Author biography
-  bio: Engineering Student at UIUC
+  bio: PhD Student in ORIE @ UT Austin
   # Site Description, used in HTML meat
   description: My Blog
 
