--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ permalinks:
 
 paginate: 4
 
-googleAnalytics: your-google-analytics-id
+googleAnalytics: G-WN3L3N0N7J
 disqusShortname: your-disqus-shortname
 
 # Hugo Configure Markup
